# TPCAV

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
data/: ChIPseq.H1-hESC.MAX.conservative.all.shuf1k.narrowPeak  hg38_rmsk.sample.bed  mcf7_ctcf_best.pt  motif-clustering-v2.1beta_consensus_pwms.test.meme  report_tpcav_score.html
examples/: toy_model_training.ipynb  tpcav_detailed_usage.ipynb
output/tcavs/: tcav_all_concepts.tsv
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
scripts/: compute_input_attrs_pca_x_cav.py  compute_layer_attrs_only.py  compute_tcav_v2_pwm.example.yaml  compute_tcav_v2_pwm.py.ipynb  compute_tcav_v2_pwm_pattern_multi.ipynb  generate_motif_concepts_v3.py  models.example.py  models.py  run_tcav_sgd_pca.py  run_tcav_sgd_pca_motif_bin.py  run_tcav_sgd_pca_motif_restrict_position.py  seq_utils.py  summarize_fscores_across_num_motifs_insertions.py.ipynb  summary_classifiers.ipynb  utils.example.py  utils.py
src/tpcav/: __init__.py  cavs.py  concepts.py  logging_utils.py  report.py  tpcav_model.py  utils.py
test/: test_cav_trainer.py
tpcav/: __init__.py  cavs.py  concepts.py  helper.py  report.py  tpcav_model.py  utils.py
