[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "tpcav"
version = "0.10.2"
description = "Testing with PCA projected Concept Activation Vectors"
authors = [{name = "Jianyu Yang", email = "yztxwd@gmail.com"},]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "pandas",
    "numpy",
    "seqchromloader",
    "deeplift",
    "pyfaidx",
    "pybedtools",
    "captum",
    "scikit-learn",
    "biopython",
    "seaborn",
    "matplotlib",
    "logomaker"
]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
keywords = ["interpretation",  "attribution", "concept", "genomics", "deep learning"]

[project.urls]
Homepage = "https://github.com/seqcode/TPCAV"

[tool.maturin]
module-name = "tpcav.rust_optim"
manifest-path = "rust/Cargo.toml"
python-source = "src"
