[package]
name = "tpcav"
version = "0.9.11"
edition = "2021"

[lib]
name = "tpcav"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
rand = "0.9.0"
rayon = "1"
faer = { version = "0.24", features = ["rayon"] }
# numpy version should match pyo3 version (e.g. pyo3 0.22 -> numpy 0.22)
numpy = "0.29"

[dependencies.pyo3]
version = "0.29.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]

